--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,11 +1,14 @@
 #root {
-  max-width: 1280px;
+  width: clamp(300px, 100vw, 1280px);
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
+  background-color: rgba(250, 250, 250, 0.9);
+  z-index: 1;
 }
 
 html {
+  overflow-y: scroll;
   font-size: 20px;
 }
 
@@ -16,28 +19,26 @@ body {
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url("/bg.jpg");
+  backdrop-filter: blur(2px); /* Размытие */
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/bg.jpg") center/cover no-repeat fixed;
+  filter: blur(2px);
+  z-index: -1;
+}
 h1 {
   font-size: clamp(2.3rem, 10vw, 4.3rem);
   line-height: 1.1;
   margin-bottom: 1rem;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.7rem 2rem;
-  font-size: 1rem;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #76c769;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  margin: 1rem;
-}
-button:hover {
-  border-color: #3c9e46;
 }
 
 /*
